test/tests/compiler/18_structures/invalid_lex/plx1_force_import_again.plx
import "get_success"
import! "get_success"

pub fn main(none) i32 {
    return get_success()
}
